# RP2040_6keypad

./: README.md
KiCad_Project/: rp2040_breakout_example.kicad_pcb  rp2040_breakout_example.kicad_pro  rp2040_breakout_example.kicad_sch
prk_firmware/: keymap.rb
qmk_firmware/: ssci_6_keypad_default.uf2
qmk_firmware/ssci/6_keypad/: README.md  config.h  info.json
qmk_firmware/ssci/6_keypad/keymaps/default/: keymap.c
sample_software/: rp2040_6key_pad_example.uf2
sample_software/rp2040_6key_pad_example/: CMakeLists.txt  README.md  main.c
